Implement changes propagation up for data hierarchy for *Ref types